2007-03-29 Marco Antonio Islas Cruz <markuz@islascruz.org>
	* libchristine/Chrinstine.py.in:
		Fixed a bug when trying to get the Small View mode.
2007-03-24 Marco Antonio Islas Cruz <markuz@islascruz.org>
	* libchristine/Display.py: 
		Fixed a small bug in the main rectangle draw.
		Fixed a small bug in the calculation of the progress bar
		width affecting the value.
	* libchristine/Christine.py.in: 
		Fixed a blocker bug in the 	FullScreen mode.
		Fixed the Import to queue
	* libchristine/Queue.py: 
		Fixed the Import to queue
2007-03-14 Marco Antonio Islas Cruz	<markuz@islascruz.org>
	* renaming lib_christine to libchristine affecting all
	module import.
	* firxin module import

2007-03-13 Marco Antonio Islas Cruz <markuz@islascruz.org>
	* Appending the current dir to the PYTHON_PATH, usefull
	when we like to use the current modules (ej. in development)
	* Fixing a lot of missed names in several modules.
	* Fixing the PATH in lib_christine/Share.py.in, in the case
	that gui/ directory exists, try to use it.
	* Fixing several modules using this kind of for
		for (i in range(x))
	* several modules point to libchristine and that was
	changed to lib_christine.

2007-03-07 Miguel Vazquez Gocobachi <demrit@gnu.org>
	* libchristine/trans.py.in is now Translator.py.in
	* Translator.trans() is now Translator.parse
	* Translator is now Singleton instance
	* Adds pattern module and Singleton.py pattern
	* Adds Share.py to manage glade templates and images
	* Big code clean for christine.py.in and change to
	  Christine.py.in
	* Adds Validator.py for miscellanius comparation, like
	  isNull(), isString(), isInteger(), isFLoad(), etc.

2006-11-19 Marco Antonio Islas Cruz <markuz@islascruz.org>
	* lib_christine/show_properties.py:
	Fixed the import fault (doesn't import discoverer) and
	the properties option was not working
2006-11-15 Marco Antonio Islas Cruz <markuz@islascruz.org>
	* General:
	Little speed improvements
	* lib_christine/player.py:
	First upload